# ballistae

./: .bazelrc  .gitignore  BUILD  Makefile  Makefile.am  README  Rules.mk  WORKSPACE  configure.ac  env-setup.sh  format.sh  libballistae.pc.in  local-gdb-guile.sh  local-guile.sh  sampling-1d.py  sampling-gradient-descent.py
augmk/: base.scm  gcc.scm  pkg-config.scm  tex.scm
example-scripts/: ambient-occlusion-demo.scm  anisotropic-scaling-demo.scm  bunny-through-glass.scm  cornell-box.scm  directional-illuminator-test.scm  directional-soft-shadows.scm  index-of-refraction-animation.scm  mc-bunny-directional-soft-shadows.scm  mc-bunny-lit-by-bunny.scm  mc-cornell-box-bunny.scm  mc-cornell-box.scm  mc-index-of-refraction-animation.scm  mc-meshes.scm  mc-rolling-marble.scm  mc-simple-texmap.scm  meshes.scm  phong-bunny.scm  reflection-demo.scm  rolling-marble-animation.scm  scene-through-bunny.scm  scene-through-dodecahedron.scm  simple-phong-scene.scm  simple-texmap.scm  transparency-demo.scm  volumetric-light.scm
examples/: BUILD  Rules.mk  cornell-box.cc
frustum/geometry/: BUILD  affine_transform.hh
frustum/indicial/: BUILD  address.hh  fixed.hh
frustum/utility/: BUILD  crtp.hh  defined_shifts.hh
guile/: Rules.mk  ballistae.scm
guile/2.0/: armadillo.scm  ballistae.scm
include/: Rules.mk
include/ballistae/: camera.hh  contact.hh  cylinder.hh  geometry_plugin.hh  plane.hh  ray.hh  sphere.hh  vector.hh
include/frustum-0/geometry/: BUILD  affine_transform.hh
include/frustum-0/indicial/: BUILD  address.hh  fixed.hh  flex.hh  flex_view.hh  generic_ops.hh
include/frustum-0/utility/: compile_time_ops.hh  conditional.hh  constant_arithmetic.hh  crtp.hh  defined_shifts.hh  iterator_range.hh  maybe.hh  parametric_primitive_types.hh  tag_structs.hh  type_support.hh
include/libballistae/: BUILD  Rules.mk  aabox.hh  affine_transform.hh  camera.hh  camera_plugin_interface.hh  cmf_cie_2006.hh  color.hh  contact.hh  dense_signal.hh  geom_affine_transform.hh  geom_instance.hh  geom_plugin_interface.hh  geometry.hh  illuminator.hh  image.hh  image_patch.hh  kd_tree.hh  material.hh  material_map.hh  matr_plugin_interface.hh  options.hh  ray.hh  render_scene.cc  render_scene.hh  scene.cc  scene.hh  span.hh  spectrum.hh  tetmesh.hh  uniform_sphere_dist.hh  uniform_sphere_sampling.hh  vector.hh  vector_distributions.hh
include/libballistae/camera/: BUILD  pinhole.hh
include/libballistae/geometry/: BUILD  box.hh  cylinder.hh  infinity.hh  load_obj.hh  plane.hh  sphere.hh  surface_mesh.hh  tri_mesh.hh
include/libballistae/material/: directional_emitter.hh  emitter.hh  gauss.hh  mc_lambert.hh  nc_smooth.hh  normal_highlighter.hh  pc_smooth.hh
include/libguile_armadillo/: Rules.mk  libguile_armadillo.hh  utility.hh
include/libguile_ballistae/: Rules.mk  affine_transform.hh  camera.hh  camera_instance.hh  camera_plugin_interface.hh  dense_signal.hh  geom_instance.hh  geom_plugin_interface.hh  geometry.hh  geometry_plugin_interface.hh  illuminator.hh  illuminator_plugin_interface.hh  libguile_ballistae.hh  material.hh  material_plugin_interface.hh  matr_instance.hh  matr_plugin_interface.hh  scene.hh  utility.hh
libballistae/: BUILD  aabox.hh  camera.hh  color.cc  color.hh  contact.hh  dense_signal.hh  geometry.hh  image.hh  kd_tree.hh  material.hh  material_map.hh  options.hh  ray.hh  render_scene.cc  render_scene.hh  scene.cc  scene.hh  span.hh  spectral_image.cc  spectral_image.hh  spectral_image_file.proto  spectral_image_test.cc  tetmesh.hh  vector.hh  vector_distributions.hh  zipstream.cc  zipstream.hh  zipstream_test.cc
libballistae/camera/: pinhole.hh
libballistae/geometry/: box.hh  cylinder.hh  infinity.hh  load_obj.hh  plane.hh  sphere.hh  surface_mesh.hh  tri_mesh.hh
libballistae/material/: BUILD  directional_emitter.hh  emitter.hh  gauss.hh  mc_lambert.hh  nc_smooth.hh  normal_highlighter.hh  pc_smooth.hh
spectral_converter/: BUILD  spectral_converter.cc
spectral_inspector/: BUILD  spectral_inspector.cc
src/: Rules.mk
src/ballistae/: Rules.mk  ballistae.cc  camera.cc  contact.cc  cylinder.cc  plane.cc  ray.cc  sphere.cc  vector.cc
src/ballistae_camera_pinhole/: Rules.mk  plugin.cc
src/ballistae_camera_plugin_pinhole/: Rules.mk  ballistae_camera_plugin_pinhole.cc
src/ballistae_geom_plugin_cylinder/: Rules.mk  ballistae_geom_plugin_cylinder.cc
src/ballistae_geom_plugin_infty/: Rules.mk  ballistae_geom_plugin_infty.cc
src/ballistae_geom_plugin_plane/: Rules.mk  ballistae_geom_plugin_plane.cc
src/ballistae_geom_plugin_sphere/: Rules.mk  ballistae_geom_plugin_sphere.cc
src/ballistae_geom_plugin_surface_mesh/: Rules.mk  load_obj.cc  load_obj.hh  plugin.cc  tri_mesh.cc  tri_mesh.hh
src/ballistae_geometry_cylinder/: Rules.mk  plugin.cc
src/ballistae_geometry_infinity/: Rules.mk  plugin.cc
src/ballistae_geometry_plane/: Rules.mk  plugin.cc
src/ballistae_geometry_sphere/: Rules.mk  plugin.cc
src/ballistae_geometry_surface_mesh/: Rules.mk  load_obj.cc  load_obj.hh  plugin.cc  tri_mesh.cc  tri_mesh.hh
src/ballistae_material_directional_emitter/: Rules.mk  plugin.cc
src/ballistae_material_emitter/: Rules.mk  plugin.cc
src/ballistae_material_gauss/: Rules.mk  plugin.cc
src/ballistae_material_mc_lambert/: Rules.mk  plugin.cc
src/ballistae_material_nonconductive_smooth/: Rules.mk  plugin.cc
src/ballistae_material_omnidirectional_emitter/: Rules.mk  plugin.cc
src/ballistae_material_pc_smooth/: Rules.mk  plugin.cc
src/ballistae_material_phong/: Rules.mk  plugin.cc
src/ballistae_matr_plugin_phong/: Rules.mk  ballistae_matr_plugin_phong.cc
src/libballistae/: Rules.mk  contact.cc  illuminator.cc  material_map.cc  ray.cc  scene.cc  vector.cc
src/libballistae/geometry/: box.cc  (+7 more)
src/libguile_armadillo/: Rules.mk  libguile_armadillo.cc
src/libguile_ballistae/: Rules.mk  affine_transform.cc  camera.cc  camera_instance.cc  dense_signal.cc  geom_instance.cc  geometry.cc  illuminator.cc  libguile_ballistae.cc  material.cc  material_plugin_interface.cc  matr_instance.cc  scene.cc
test/geometry/: box.cc
(+1 files in other folders)
