AC_INIT([ballistae], [0.0.1], [ahmed.taahir@gmail.com])

# We only target GNU Make, so disable portability warnings.
AM_INIT_AUTOMAKE([-Wall,no-portability -Werror foreign subdir-objects])

AC_CONFIG_MACRO_DIRS([m4])

# Locate ar and initialize libtool.
AM_PROG_AR
LT_INIT

AC_PROG_CXX

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
