AC_INIT([ballistae], [0.0.1], [ahmed.taahir@gmail.com], [https://row-major.net/projects/ballistae])

# We only target GNU Make, so disable portability warnings.
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

AC_CONFIG_MACRO_DIRS([m4])

AC_PROG_CXX

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([libballistae.pc])

AC_OUTPUT
